[package]
name = "ipfs-pinner"
version = "0.1.0"
authors = ["Kaushal M <kshlmster@gmail.com>"]
description = "Pin a file or directory to IPFS"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
async-std = {version = "1.9.0", features = ["attributes", "tokio02"]}
async-trait = "0.1.50"
clap = "3.0.0-beta.2"
ipfs-api = "0.9.0"
strum = "0.20"
strum_macros = "0.20"
